Fix for collapse class in IE7/IE8 on single products page

--- a/assets/less/reece-ie.less
+++ b/assets/less/reece-ie.less
@@ -51,25 +51,11 @@
 .lt-ie9 {	
 
 	//Fix product pages collapse class
-
-	#product-filters.collapse {
+	#product-filters.collapse, .products-tabs .collapse {
 		position: static;
 		height: auto;
 		overflow: visible;
 	}
-
-	// #accordion .collapse {
-	// 	// position: static;
-	// 	// height: auto;
-	// 	// overflow: visible;
-	// }
-
-	// .product-filter	{
-	// 	// .collapse {
-	// 	// 	overflow: visible;
-	// 	// 	height: auto;
-	// 	// }
-	// }
 }
 
 .lt-ie8 {	
